# MarbleMarcher

./: CMakeLists.txt  gcc.bat  gdb.bat
assets/: frag.glsl  fsq.vert  full_raymarch_no_sea.frag  full_raymarch_sea.frag  sparse_raymarch.comp  sparse_shadow_raymarch.comp
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_debug/src/: cmake_install.cmake
src/: CMakeLists.txt  Level.cpp  Level.h  Main.cpp  Overlays.cpp  Resource.rc  Scene.cpp  Scene.h  SelectRes.cpp  c_math.h  defines.h  load_shaders.cpp  load_shaders.h
